manifests/lauraforloveland.com/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: aultvfw
  labels:
    app.kubernetes.io/name: lauraforloveland
    app.kubernetes.io/instance: lauraforloveland
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: lauraforloveland
      app.kubernetes.io/instance: lauraforloveland
  template:
    metadata:
      labels:
        app.kubernetes.io/name: lauraforloveland
        app.kubernetes.io/instance: lauraforloveland
    spec:
      serviceAccountName: lauraforloveland
      securityContext:
        {}
      containers:
        - name: lauraforloveland
          securityContext:
            {}
          image: "ghcr.io/awbsough/lauraforloveland.com:main"
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 80
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /
              port: 80
          readinessProbe:
            httpGet:
              path: /
              port: 80
          resources: {}
      imagePullSecrets:
        - name: githubsecret
