manifests/lauraforloveland.com/service.yaml
# Source: piwigo/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: lauraforloveland
  labels:
    app.kubernetes.io/name: lauraforloveland
    app.kubernetes.io/instance: lauraforloveland
    app.kubernetes.io/version: "1.16.0"
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: lauraforloveland
    app.kubernetes.io/instance: lauraforloveland
