manifests/lauraforloveland.com/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: lauraforloveland
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/ingress.class: nginx
    kubernetes.io/tls-acme: "true"
spec:
  tls:
  - hosts:
      - www.lauraforloveland.com
      - lauraforloveland.com
      - stage.lauraforloveland.com
    secretName: lauraforloveland-tls
  rules:
  - host: lauraforloveland.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: lauraforloveland
            port:
              number: 80
  - host: www.lauraforloveland.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: lauraforloveland
            port:
              number: 80
  - host: stage.lauraforloveland.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: lauraforloveland-stage
            port:
              number: 80
